<resources>
    <string name="app_name">Hydra SDK Demo</string>

    <string name="vpn_process_name" translatable="false">:my.custom.vpn.process.name</string>
    <string name="vpn_provider_authorities" translatable="false">com.anchorfree.hydrasdk.app.demo</string>

    <string name="log_in">LOGIN</string>
    <string name="log_out">LOGOUT</string>
    <string name="connect">CONNECT</string>
    <string name="disconnect">DISCONNECT</string>
    <string name="optimal_server">OPTIMAL SERVER</string>
    <string name="unknown">UNKNOWN</string>

    <string name="devices_exceed">Available device count is exceed. Please consider upgrading your subscription.</string>
    <string name="sessions_exceed">Available active session count is exceed. Please consider upgrading your subscription.</string>

    <string name="version">Version</string>
    <string name="app_error">Application error</string>
    <string name="no_data">No data</string>
    <string name="personal_information">Personal Information</string>
    <string name="account_type">Account Type</string>
    <string name="activated_devices">Activated Devices</string>
    <string name="account">Account</string>
    <string name="signin_error">Unable to sign in</string>
    <string name="no_network">Unable to connect to server. Check your Internet connection.</string>
    <string name="online_devices">Online Devices</string>
    <string name="please_wait">Please Wait</string>
    <string name="vpn_server_location">VPN Server Location</string>
    <string name="vpn_node">VPN Node</string>
    <string name="legal_information">Legal Information</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>

    <string name="logged_in">Logged in</string>
    <string name="logged_out">Logged out</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>

    <string name="host_url_title">Host Url: </string>
    <string name="carrier_id_title">Carrier ID: </string>
    <string name="confirm">CONFIRM</string>

    <string name="traffic_stats">UL: %1$s, DL: %2$s </string>
    <string name="traffic_limit">%1$s of %2$s available</string>
    <string name="traffic_unlimited">UNLIMITED</string>

    <string name="current_server">CURRENT_SERVER</string>
    <string name="connecting">Connecting</string>
    <string name="paused">Paused</string>
    <string name="config_patch_address">Config patch address:</string>
    <string name="carrier">Carrier:</string>
    <string name="backend_url">Backend URL:</string>
    <string name="init">Init</string>
    <string name="permission_dialog_message">"In order for Wireguard transport to be functional this app requires permission to schedule exact alarms. Please enable this permission in your device settings."</string>
    <string name="permission_dialog_positive">"Go to setting"</string>
    <string name="permission_dialog_negative">"Decilne"</string>

</resources>
