<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ToolbarTheme"/>

    <LinearLayout
        style="@style/ButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/login_btn"
            style="@style/DefaultBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="150dp"
            android:text="@string/log_in"/>

        <TextView
            android:id="@+id/login_state"
            style="@style/StateText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/logged_out"/>

        <ProgressBar
            android:id="@+id/login_progress"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:visibility="gone"
            tools:visibility="visible"/>

    </LinearLayout>

    <LinearLayout
        style="@style/ButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/connect_btn"
            style="@style/DefaultBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="150dp"
            android:text="@string/connect"/>

        <TextView
            android:id="@+id/connection_state"
            style="@style/StateText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/disconnected"/>

        <ProgressBar
            android:id="@+id/connection_progress"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:visibility="gone"
            tools:visibility="visible"/>

    </LinearLayout>

    <LinearLayout
        style="@style/ButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/optimal_server_btn"
            style="@style/DefaultBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/optimal_server"/>

        <TextView
            android:id="@+id/selected_server"
            style="@style/StateText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/unknown"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/traffic_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_padding"
        android:text="UL: 0 Kb, DL: 0 Kb"
        android:textColor="@android:color/black"
        android:textSize="@dimen/default_text_size"
        android:visibility="invisible"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/traffic_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_padding"
        android:layout_marginLeft="@dimen/default_padding"
        android:layout_marginTop="8dp"
        android:alpha="0.7"
        android:text="0 Mb of 0 Mb available"
        android:textColor="@android:color/black"
        android:textSize="@dimen/default_text_size"
        android:visibility="invisible"
        tools:visibility="visible"/>

</LinearLayout>

