<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/default_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="90dp"
            android:text="@string/host_url_title"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/host_url_ed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:hint="Your host url or empty"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:text="Your Host URL or Empty for demo default"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="90dp"
            android:text="@string/carrier_id_title"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/carrier_id_ed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:hint="Your carrier id or empty"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:text="Your carrier id or Empty for demo default"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_padding"
        android:layout_marginTop="@dimen/default_padding"
        android:gravity="center">

        <TextView
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bkg"
            android:paddingBottom="@dimen/default_padding"
            android:paddingLeft="@dimen/increased_padding"
            android:paddingRight="@dimen/increased_padding"
            android:paddingTop="@dimen/default_padding"
            android:text="@string/log_in"
            android:textColor="@android:color/white"
            android:textSize="@dimen/default_text_size"/>

    </LinearLayout>

</LinearLayout>